fixing spacing issues for front page featured items

--- a/css/style.css
+++ b/css/style.css
@@ -867,7 +867,7 @@ hr{margin:20px 0;border:0;border-top:1px solid #9184bd;border-bottom:1px solid #
 .social-buttons li{display:inline-block;padding:5px 8px;line-height:1;}
 .fb_iframe_widget{top:-8px !important;}
 .hot{text-align:center;margin-top:20px;line-height:5px;}.hot h2{color:#4d4d4d;font-weight:400;}
-.featureditem{text-align:left;width:210px;height:250px;background:#ffffff;float:left;margin:0 6px 50px 6px;border:solid 1px #cbcbcb;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;-webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) !important;-moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) !important;box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) !important;padding:2px 2px 5px 2px;}
+.featureditem{text-align:left;width:220px;height:250px;background:#ffffff;float:left;margin:0 6px 50px 6px;border:solid 1px #cbcbcb;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;-webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) !important;-moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) !important;box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) !important;padding:2px 2px 5px 2px;}
 .hotfeaturedtext{margin:8px 6px 5px 6px;font-size:12px;line-height:17px;color:#666666;}.hotfeaturedtext strong{color:#000000;}
 .hotfeaturedtext hr{margin:10px 0;border:0;border-top:1px solid #d9d9d9;}
 .hotfeatured{margin-top:30px;}
