--- a/less/custom.less
+++ b/less/custom.less
@@ -93,7 +93,7 @@ top: -8px !important;
 
 .featureditem {
 	text-align: left;
-	width: 210px;
+	width: 220px;
 	height: 250px;
 	background: @white;
 	float:left;
